tests/suite/fail/generated/types/fail_logical_f64_or_false.ny
fn main() {
    let _ = 1.0 || false //~ ERROR requires bool
}
